5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1590_1571.log
== TEST (2019-03-21 13:18:23) 
-- CODE:
texto = selina kyle
print(texto.upper())
-- ERROR:
File "XXXX", line 1
    texto = selina kyle
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:18:35) 
-- CODE:
texto = Selina Kyle
print(texto.upper())
-- ERROR:
File "XXXX", line 1
    texto = Selina Kyle
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:18:45) 
-- CODE:
texto = "Selina Kyle"
print(texto.upper())
-- OUTPUT:
SELINA KYLE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:18:49) 
-- CODE:
texto = "Selina Kyle"
print(texto.upper())
-- EXECUTION TIME:
0.158366
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
SELINA KYLE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 15:50:05) 
-- CODE:
texto = "Selina Kyle"
print(texto.upper())
-- EXECUTION TIME:
0.212944
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
SELINA KYLE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:50:07) 
-- CODE:
texto = "Selina Kyle"
print(texto.upper())
-- OUTPUT:
SELINA KYLE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:42:37) 
-- CODE:
texto = "Selina Kyle"
print(texto.upper())
-- OUTPUT:
SELINA KYLE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:42:39) 
-- CODE:
texto = "Selina Kyle"
print(texto.upper())
-- EXECUTION TIME:
0.154371
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
SELINA KYLE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:42:46) 
-- CODE:
texto = " "
print(texto.upper())
-- OUTPUT:
SELINA KYLE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:42:49) 
-- CODE:
texto = " "
print(texto.upper())
-- EXECUTION TIME:
0.139285
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:48:00) 
-- CODE:
texto = (input("Selina Kyle"))
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:48:02) 
-- CODE:
texto = (input("Selina Kyle"))
print(texto.upper())
-- EXECUTION TIME:
0.143956
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
